# PortfolioMgt-MSc

./: Readme.md  environment.yml  pyproject.toml  requirements.txt  setup.py
src/: config.py  persist.py
src/backtest/: metrics.py
src/data/: clean.py  features.py  loader.py
src/env/: portfolio_env.py
src/opt/: backtester.py  optimizer_interface.py  solvers.py
src/rl/: agent.py  ppo.py  trainer.py
src/utils/: logging.py
tests/: test_optimizer.py
