[project]
name = "hybrid-rl-portfolio"
version = "0.1.0"
description = "Hybrid RL + convex optimization for crypto portfolio management"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="Your Name", email="you@example.com" }
]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "pyarrow",
  "torch>=2.0",
  "gymnasium>=0.28",
  "osqp",
  "cvxpy",
  "tqdm",
  "ruamel.yaml",
  "seaborn",
  "plotly",
  "scikit-learn"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
